<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewBien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtPre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences" />

    <TextView
        android:id="@+id/txtActPre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtDirPre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtGenPre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/log_out" />

</LinearLayout>